# edu-proxy

./: README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
edu-proxy/: .gitignore  main.py  main_fastapi.py  nixpacks.toml  passenger_wsgi.py  railway.json  requirements.txt
edu-proxy/edu-proxy/: main.py
edu-proxy/edu-proxy/templates/: index.html
