[tool.poetry]
name = "edu-proxy"
version = "1.0.0"
description = "教务系统代理服务"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
httpx = "^0.25.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"